--- a/public/css/primary.css
+++ b/public/css/primary.css
@@ -2,6 +2,10 @@
     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 }
 
+body {
+    position: relative;
+}
+
 a {
     text-decoration: none;
     color: black;
@@ -19,11 +23,12 @@ a:visited {
     color: darkred;
 }
 
-a .button-person-font {
+a.btn-person-font {
     font-size: 20px;
 }
 
 .main-home {
+    position: relative;
     margin-left: auto;
     margin-right: auto;
     height: 100vh;
@@ -34,27 +39,84 @@ a .button-person-font {
 }
 
 .main-header {
-    border-bottom: solid 1px red;
     margin-left: 0;
     margin-right: 0;
     height: 20%;
 }
 
-.button-person {
-    border: 1px solid white;
+.btn-person {
+    position: relative;
+    background-color: white;    
     border-radius: 5px;
     height: 10%;
     margin-bottom: 4px;
     font-size: 20px;
 }
 
-.button-mentor {
+img.btn-icon {
+    position: absolute;
+    left: 30px;
+    top: 19px;
+}
+
+.btn-mentor {
+    position: relative;
+    background-color: blueviolet;
     text-align: center;
     margin-top: 2px;
     margin-bottom: 4px;
-    color: white;    
 }
 
-.button-mentor a {
+.btn-person a {
+    position: absolute;
+    left: 75px;
+    top: 20px;
     margin-top: auto;
+}
+
+.btn-home {
+    padding: 5px;
+    position: absolute;
+    border: 1px solid black;
+    bottom: 35px;
+    left: 57px;
+}
+
+.btn-home-msg {
+    padding: 5px;
+    position: absolute;
+    border: 1px solid black;
+    bottom: 35px;
+    right: 48px;
+}
+
+button {
+    background-color: blue;
+}
+
+button.btn-settings {
+    position: absolute;
+    z-index: 10;
+    right: 15px;
+    top: 15px;
+    height: 20px;
+    width: 20px;
+}
+
+button.btn-account {
+    position: absolute;
+    z-index: 10;
+    left: 15px;
+    top: 15px;
+    height: 20px;
+    width: 20px;
+}
+
+.logo {
+    position: absolute;
+    top: 20px;
+    left: 40%;
+    padding: 10px;
+    z-index: 10;
+    border: 1px solid black;
 }
