--- a/public/css/primary.css
+++ b/public/css/primary.css
@@ -31,25 +31,39 @@ a.btn-person-font {
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    height: 100vh;
+    height: 98vh;
     padding: 0;
     background: #ebebeb;
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 50% 85%, 50% 100%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 50% 85%, 50% 100%, 0 100%);
+    /*-webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 50% 85%, 50% 100%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 50% 85%, 50% 100%, 0 100%);*/
 }
 
 .main-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
     margin-left: 0;
     margin-right: 0;
     height: 20%;
 }
 
+.main-scroll {
+    height: 61vh;
+    border: 1px solid black;
+}
+
 .btn-person {
     position: relative;
+    overflow-y: scroll;
     background-color: white;    
-    border-radius: 5px;
-    height: 10%;
-    margin-bottom: 4px;
+    border-radius: 10px;
+    width: 95%;
+    height: 60px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 6px;
     font-size: 20px;
 }
 
@@ -74,49 +88,47 @@ img.btn-icon {
     margin-top: auto;
 }
 
-.btn-home {
-    padding: 5px;
-    position: absolute;
-    border: 1px solid black;
-    bottom: 35px;
-    left: 57px;
+.btn-settings {
+    align-self: flex-start;
+    height: 20px;
+    width: 10px;
 }
 
-.btn-home-msg {
-    padding: 5px;
-    position: absolute;
+.btn-account {
+    align-self: flex-start;
+    height: 20px;
+    width: 10px;
+}
+
+.tab {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    height: 15vh;
     border: 1px solid black;
-    bottom: 35px;
-    right: 48px;
+}
+
+.btn-tab {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: 1px solid black;
+}
+
+.btn-home {
+
+}
+
+.btn-msg {
+
 }
 
 button {
     background-color: blue;
 }
 
-button.btn-settings {
-    position: absolute;
-    z-index: 10;
-    right: 15px;
-    top: 15px;
-    height: 20px;
-    width: 20px;
-}
-
-button.btn-account {
-    position: absolute;
-    z-index: 10;
-    left: 15px;
-    top: 15px;
-    height: 20px;
-    width: 20px;
-}
-
 .logo {
-    position: absolute;
-    top: 20px;
-    left: 40%;
-    padding: 10px;
-    z-index: 10;
+    
     border: 1px solid black;
 }
