--- a/public/views/index.handlebars
+++ b/public/views/index.handlebars
@@ -6,6 +6,9 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
         <link rel="stylesheet" href="public/css/primary.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+        <script src="js/jquery-1.11.0.js"></script>
+	    <script src="js/bootstrap.js"></script>
+        <script src="js/homepage.js"></script>
     </head>
     <body>
         <div class="main-home">
@@ -25,26 +28,14 @@
                     <img class="btn-icon" src="public/images/svg/basic_eye.svg" height="30">
                     <a href="public/html/mentors.html" class="btn-person-font">Find a Mentor</a>
                 </div>
+
+                {{#each users}}
                 <div class="btn-person">
-                    <img class="btn-icon" src="public/images/svg/basic_eye.svg" height="30">
-                    <a href="public/html/account.html" class="btn-person-font">Scott Klemmer</a>
+                    <img class="btn-icon" src={{imageURL}} height="30">
+                    <a href="public/html/account.html" class="btn-person-font">{{name}}</a>
                 </div>
-                <div class="btn-person">
-                    <img class="btn-icon" src="public/images/svg/basic_eye.svg" height="30">
-                    <a href="public/html/account.html" class="btn-person-font">Barack Obama</a>
-                </div>
-                <div class="btn-person">
-                    <img class="btn-icon" src="public/images/svg/basic_eye.svg" height="30">
-                    <a href="public/html/account.html" class="btn-person-font">Michael Jordan</a>
-                </div>
-                <div class="btn-person">
-                    <img class="btn-icon" src="public/images/svg/basic_eye.svg" height="30">
-                    <a href="public/html/account.html" class="btn-person-font">Gary Gillespie</a>
-                </div>
-                <div class="btn-person">
-                    <img class="btn-icon" src="public/images/svg/basic_eye.svg" height="30">
-                    <a href="public/html/account.html" class="btn-person-font">John Smith</a>
-                </div>
+                {{/each}}
+
             </div>
             <div class="tab">
                 <div class="btn-tab btn-home">
